- There were miscellaneous changes in the graph API with bogus functions or
  function arguments removed, misnamed functions renamed and argument
  handling sanitized.

Modules:
- Shade: Crash on Mix checkbutton click was fixed.
- Color range: Crash upon tool switch when there was already a selection
  was fixed.
- Assing AFM: Crash on import introduced in 1.99.9 was fixed.
- SPMLab: Channel type is imported and used as the channel title.
- Crop, Color range, Filters, Mask editor, Statistical function, Statistical
  quantities: Wrong selection boundaries when it was drawn `backwards' were
  fixed.
- Graph exports: User interface was made more consistent, memory leaks were
  fixed.
- Mark Grain by Threshold: instant updates option available
- Remove Grain by Threshold: instant updates option available

Other:
- Source files dependent on ./configure-set installation paths are properly
  rebuilt when ./configure is re-run.


1.99.9 (2006-09-07)
Libraries:
- libgwydgets: Always insensitive 3D window light position controls were
  fixed.
- libgwydgets: 3D window controls not always reflecting 3D view's state were
  fixed.

Modules:
- File modules: Many `Unknown channel's were replaced with meaningful channel
  names, disabled metadata import was restored for most file types.
- Statistical quantities: Initial sensitivity of Save was fixed, preventing
  attempts to save nonexistent statistics that led to crashes.
- SPML import: Miscellaneous small fixes and improvements.
- Gwyfile: Rectangle, point and line selections are imported from 1.x files.
- ASCII export: Exports the current channel instead of always the first one.
- Shade: Mixing GUI was improved.


1.99.8 (2006-08-10)
Application:
- Crash on app exit when Document history is open was fixed.
- Recent files menu items have thumbnails.
- Data browser: Miscellaneous bugs were fixed.
- Data browser: Channel and graph titles are editable.
- Color axis does not display ticks/values when they are not applicable.